new changes with authorization